fix(A11y): fix button contrast

--- a/src/components/molecules/Button/_components.button.scss
+++ b/src/components/molecules/Button/_components.button.scss
@@ -1,5 +1,5 @@
 .buv-c-button {
-  background-color: rgba(42, 178, 123, 1);
+  background-color: rgba(31, 132, 92, 1);
   border-radius: 0 2px 2px 0;
   color: #FFFFFF;
   cursor: pointer;
